cmake_minimum_required(VERSION 3.6.2)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)


add_executable(lc4findmediansorted findmediansorted.cpp)
add_executable(lc6convertString convertString.cpp)
add_executable(lc7reverseint reverseint.cpp)
add_executable(lc8atoi atoi.cpp)
add_executable(lc9ispalindrome  isPalindrome.cpp)
add_executable(lc10regularmatch  regularmatch.cpp searchInsert.cpp)
add_executable(lc11maxarea  maxarea.cpp)
add_executable(lc12intoroman  intoroman.cpp)
add_executable(lc14longestcommonprefix longestcommonprefix.cpp)
add_executable(lc15threesum  threesum.cpp)
add_executable(lc16threesumclosest  threesumcloeset.cpp)
add_executable(lc17lettercombinations lettercombinations.cpp)
add_executable(lc18foursum foursum.cpp)
add_executable(lc19removenthfromend removenthfromend.cpp)
add_executable(lc20isvalid isvalid.cpp)
add_executable(lc21mergetwolist  mergetwolist.cpp)
add_executable(lc22generateparenthesis  generateparenthesis.cpp)
add_executable(lc23mergelists mergeLists.cpp)
add_executable(lc24swappairs swappairs.cpp)
add_executable(lc25reversekgroup reversekgroup.cpp)
add_executable(lc26removeduplicates removeDuplicates.cpp)
add_executable(lc27removeElements removeElements.cpp)
add_executable(lc28strStr strStr.cpp)
add_executable(lc29divide divide.cpp)
add_executable(lc30findSubstring findSubstring.cpp)
add_executable(lc31nextPermutation nextPermutation.cpp)
add_executable(lc32longestValidParentheses longestValidParentheses.cpp)
add_executable(lc33search search.cpp)
add_executable(lc34searchRange searchRange.cpp)
add_executable(lc36isValidSoduku isValidSoduku.cpp)
add_executable(lc37solveSudoku solveSudoku.cpp)
add_executable(lc38countandsay countandsay.cpp)
add_executable(lc39combinationSum combinationSum.cpp)
add_executable(lc40combinationSum2 combinationSum2.cpp)
add_executable(lc43mutiply mutiply.cpp)
add_executable(lc46permute permute.cpp)
add_executable(lc47permuteUnique permuteUnique.cpp)
add_executable(lc48rotate rotate.cpp)
add_executable(lc49groupAnagrams groupAnagrams.cpp)
add_executable(lc50pow pow.cpp)
add_executable(lc219containsNearbyDuplicate containsNearbyDuplicate.cpp)
add_executable(lc53maxsubArray maxsubArray.cpp)
add_executable(lc54spiralOrder spiralOrder.cpp)
add_executable(lc55canJump canJump.cpp)
add_executable(lc56mergeintervals mergeintervals.cpp)
add_executable(lc58lengthOfLastWord lengthOfLastWord.cpp)
add_executable(lc59generateMatrix generateMatrix.cpp)
add_executable(lc60getPermutation getPermutation60.cpp)
add_executable(lc61rotateRight rotateRight61.cpp)
add_executable(lc62uniquePaths uniquePaths62.cpp)
add_executable(lc63uniquePathsWithObstacles uniquePathsWithObstacles63.cpp)
add_executable(lc64minPathSum minPathSum64.cpp)
add_executable(lc65plusOne plusOne65.cpp)
add_executable(lc67addBinary addBinary67.cpp)
add_executable(lc69mySqrt mySqrt69.cpp)
add_executable(lc70climbStairs climbStairs70.cpp)

