cmake_minimum_required(VERSION 3.6.2)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)


add_executable(lc4findmediansorted findmediansorted.cpp)
add_executable(lc5longestPalindrome longestPalindrome.cpp)
add_executable(lc6convertString convertString.cpp)
add_executable(lc7reverseint reverseint.cpp)
add_executable(lc8atoi atoi.cpp)
add_executable(lc331isValidSerialization isValidSerialization331.cpp)
add_executable(lc9ispalindrome  isPalindrome.cpp)
add_executable(lc10regularmatch  regularmatch.cpp)
add_executable(lc105buildTree buildTree.cpp)
add_executable(lc1143longestCommonSubsequence longestCommonSubsequence1143.cpp)
add_executable(lc290wordPattern wordPattern.cpp)
add_executable(lc135candy candy135.cpp)
add_executable(lc139wordBreak wordBreak139.cpp)
add_executable(lc140wordbreak wordbreak140.cpp)
add_executable(lc547findCircleNum findCircleNum.cpp)
add_executable(lc109sortedListToBST sortedListToBST109.cpp)
add_executable(lcsearchInsert searchInsert.cpp)
add_executable(lc78subsets subsets78.cpp)
add_executable(lcother  inorderTraversal94.cpp findMin154.cpp)
add_executable(lc lowestCommonAncestor235.cpp postorderTraversal145.cpp pacificAtlantic417.cpp repeatedSubstringPattern459.cpp partition86.cpp findMaximizedCapital502.cpp)
add_executable(lc52totalNQueens totalNQueens52.cpp)
add_executable(lc321maxNumber maxNumber321.cpp)
add_executable(lc134canCompleteCircuit canCompleteCircuit134.cpp)
add_executable(lc76minWindow minWindow76.cpp)
add_executable(lc402removeKdigits removeKdigits402.cpp)
add_executable(lc468validIPAddress validIPAddress468.cpp)
add_executable(lc3lengthoflongestSubstring lengthoflongestSubstring3.cpp)
add_executable(lc42trap trap42.cpp)
add_executable(lc407trapWaterRain trapWaterRain407.cpp)
add_executable(lcsumRange sumRange307.cpp connect116.cpp)
add_executable(lc491findSubsequences findSubsequences491.cpp)
add_executable(lc473makeSquare makeSquare.cpp)
add_executable(lc207canFinish canFinish207.cpp)
add_executable(lc133cloneGraph cloneGraph.cpp)
add_executable(lc199rightSideView rightSideView199.cpp)
add_executable(lc114flatten flatten114.cpp)
add_executable(lc230kthSmallest kthSmallest.cpp)
add_executable(lc538convertBST convertBST538.cpp)
add_executable(lc144preorderTraversal preorderTraversal144.cpp)
add_executable(lowestCommonfather lowestCommonfather.cpp)
add_executable(zhaoshangfixTower  fixTower.cpp)
add_executable(findmin  findmin.cpp)
add_executable(lc765minSwapsCouples765 minSwapsCouples765.cpp)
add_executable(lc200numIsLand numIsLand200.cpp)
add_executable(lc198rob rob198.cpp)
add_executable(trailingZeros trailingZeros.cpp)
add_executable(lc11maxarea  maxarea.cpp)
add_executable(lc12intoroman  intoroman.cpp)
add_executable(lc14longestcommonprefix longestcommonprefix.cpp)
add_executable(lc15threesum  threesum.cpp)
add_executable(lc51solveNQueens solveNQueens51.cpp)
add_executable(lc16threesumclosest  threesumcloeset.cpp)
add_executable(lc17lettercombinations lettercombinations.cpp)
add_executable(lc18foursum foursum.cpp)
add_executable(lc19removenthfromend removenthfromend.cpp)
add_executable(lc20isvalid isvalid.cpp)
add_executable(lc21mergetwolist  mergetwolist.cpp)
add_executable(lc22generateparenthesis  generateparenthesis.cpp)
add_executable(lc23mergelists mergeLists.cpp)
add_executable(lc24swappairs swappairs.cpp)
add_executable(lc25reversekgroup reversekgroup.cpp)
add_executable(lc26removeduplicates removeDuplicates.cpp)
add_executable(lc27removeElements removeElements.cpp)
add_executable(lc28strStr strStr.cpp)
add_executable(lc29divide divide.cpp)
add_executable(lc30findSubstring findSubstring.cpp)
add_executable(lc31nextPermutation nextPermutation.cpp)
add_executable(lc32longestValidParentheses longestValidParentheses.cpp)
add_executable(lc33search search.cpp)
add_executable(lc34searchRange searchRange.cpp)
add_executable(lc36isValidSoduku isValidSoduku.cpp)
add_executable(lc37solveSudoku solveSudoku.cpp)
add_executable(lc38countandsay countandsay.cpp)
add_executable(lc39combinationSum combinationSum.cpp)
add_executable(lc40combinationSum2 combinationSum2.cpp)
add_executable(lc43mutiply mutiply.cpp)
add_executable(lc46permute permute.cpp)
add_executable(lc47permuteUnique permuteUnique.cpp)
add_executable(lc48rotate rotate.cpp)
add_executable(lc49groupAnagrams groupAnagrams.cpp)
add_executable(lc50pow pow.cpp)
add_executable(lc219containsNearbyDuplicate containsNearbyDuplicate.cpp)
add_executable(lc53maxsubArray maxsubArray.cpp)
add_executable(lc54spiralOrder spiralOrder.cpp)
add_executable(lc55canJump canJump.cpp)
add_executable(lc56mergeintervals mergeintervals.cpp)
add_executable(lc58lengthOfLastWord lengthOfLastWord.cpp)
add_executable(lc59generateMatrix generateMatrix.cpp)
add_executable(lc60getPermutation getPermutation60.cpp)
add_executable(lc61rotateRight rotateRight61.cpp)
add_executable(lc62uniquePaths uniquePaths62.cpp)
add_executable(lc63uniquePathsWithObstacles uniquePathsWithObstacles63.cpp)
add_executable(lc64minPathSum minPathSum64.cpp)
add_executable(lc65plusOne plusOne65.cpp)
add_executable(lc67addBinary addBinary67.cpp)
add_executable(lc69mySqrt mySqrt69.cpp)
add_executable(lc70climbStairs climbStairs70.cpp)
add_executable(lc71simplyPath simplyPath71.cpp)
add_executable(lc136singleNumbe singleNumbe136.cpp)
add_executable(lc138copyRandomList copyRandomList138.cpp)
add_executable(lc74searchMatrix searchMatrix74.cpp)
add_executable(lc153findMin153 findMin153.cpp)
add_executable(lc81search search81.cpp)
add_executable(lccompetition competition.cpp)
add_executable(lc1366rankteams rankteams1366.cpp)
add_executable(lc225myStack225 myStack225.cpp)
add_executable(lc206reverseList reverseList206.cpp)
add_executable(lc1368minCost minCost1368.cpp)
add_executable(lcinterview01merge interview01merge.cpp)
add_executable(lc92reverseBetween reverseBetween92.cpp)
add_executable(lcinterview57findContinuousSequence interview57findContinuousSequence.cpp)
add_executable(lc160getIntersectionNode getIntersectionNode160.cpp)
add_executable(lc322coinChange coinChange322.cpp)
add_executable(lc121maxProfit121 maxProfit121.cpp)
add_executable(lc543diameterOfBinaryTree diameterOfBinaryTree543.cpp)
add_executable(lc535tinyURL tinyURL.cpp)
add_executable(lc412fizzBuzz fizzBuzz.cpp)
add_executable(lc146LRUCache LRUCache146.cpp)
add_executable(lc283moveZeroes moveZeroes.cpp)
add_executable(lc1349maxStudents maxStudents.cpp)
add_executable(lc365canMeasureWater canMeasureWater.cpp)
add_executable(lc141hasCycle hasCycle141.cpp)
add_executable(lc208trie trie208.cpp)
add_executable(lc360 360.cpp)
add_executable(override  override.cpp)
add_executable(inherited  inherited.cpp)
add_executable(360likelihood 360likelihood.cpp)
add_executable(sapSimulationSingleNumber sapSimulationSingleNumber.cpp)
add_executable(lc137singlenumber singlenumber137.cpp)
add_executable(lc260singlenumber singlenumber260.cpp)
add_executable(lc173BSTIterator BSTIterator173.cpp)
add_executable(lc212findWords findWords212.cpp)
add_executable(lc912qiucksort quicksort912.cpp)
add_executable(lc912heapSort heapSort912.cpp)
add_executable(wangyiscore  score.cpp)
add_executable(baidu minNoExist.cpp)
add_executable(kuaishou  kuaishou.cpp)
add_executable(kuaishoutree  kuaishoutree.cpp)
add_executable(addOperators+- addOperators+-.cpp)
add_executable(addOperators addOperators.cpp)
add_executable(customer customerkuaishou.cpp)
add_executable(kuaishouperfect kuaishouperfect.cpp)
add_executable(maxStudentskuaishou maxStudentskuaishou.cpp)
add_executable(closecitywangyi closecitywangyi.cpp)
add_executable(dijkstraali dijkstraali.cpp)
add_executable(mirrorstrzhaoshang mirrorstrzhaoshang.cpp)
add_executable(lc1027longestArithSeqLength longestArithSeqLength1027.cpp)
add_executable(lc873lenLongestFibSubseq lenLongestFibSubseq873.cpp)
add_executable(shousi strcat.cpp)
add_executable(lc120minimumTotal  minimumTotal.cpp)
add_executable(lc84largestRectangleArea largestRectangleArea.cpp)